Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,50 @@
-  html {
-    box-sizing: border-box;
-    font-family: Merriweather, serif;
-  }
-
-  *, *::before, *::after {
-    box-sizing: inherit;
-  }
+html {
+  font-family: Merriweather, serif;
 }
 
 th {
   border: 1px;
-  border-color: black;
+  border-color: #ccc;
   border-style: solid;
 }
 
 td {
   border: 1px;
-  border-color: black;
+  border-color: #ccc;
   border-style: solid;
 }
 
 tbody td {
-height: 11em
+  height: 10em;
 }
 
 .calendar,
 td,
 th {
-border: 1px solid #ccc;
+  border: 1px solid #ccc;
+}
+
+.event {
+  background-color: #f2f2f2;
+  border: 1px solid #666;
+  border-radius: 8px;
+  color: #333;
+}
+
+.event-earth {
+  background-color: #d1e0bf;
+  border-color: #6b7e54;
+  color: #51603f;
+}
+
+.event-holiday {
+  background-color: #f2bcbc;
+  border-color: #b92828;
+  color: #991919;
+}
+
+.event-media {
+  background-color: #d2d6f0;
+  border-color: #1d38da;
+  color: #38448e;
 }
